--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
