--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.5.3
   collection: ^1.19.1
+  logger: ^2.6.0
 
 dev_dependencies:
   flutter_test:
