--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,15 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
   intl: ^0.20.2
-  geolocator: ^14.0.1
+  geolocator: ^14.0.2
   geocoding: ^4.0.0
   http: ^1.4.0
   shared_preferences: ^2.5.3
   collection: ^1.19.1
   logger: ^2.6.0
+  flutter_local_notifications: ^19.3.0
+  permission_handler: ^12.0.1
+  flutter_background: ^1.3.0+1
 
 dev_dependencies:
   flutter_test:
