--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_local_notifications: ^19.3.0
   permission_handler: ^12.0.1
   flutter_background: ^1.3.0+1
+  workmanager: ^0.8.0
+  timezone: ^0.10.1
+
 
 dev_dependencies:
   flutter_test:
