--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_background: ^1.3.0+1
   workmanager: ^0.8.0
   timezone: ^0.10.1
+#  android_alarm_manager_plus: ^4.0.7
 
 
 dev_dependencies:
